<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="ru.kazakov.task3serverwork.AddChannelFragment">

    <TextView
        android:id="@+id/tv_chat_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tv_chat_name" />

    <EditText
        android:id="@+id/et_chat_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/et_chat_name" />

    <TextView
        android:id="@+id/tv_chat_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tv_chat_descr" />

    <EditText
        android:id="@+id/et_chat_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/et_chat_descr" />

    <Button
        android:id="@+id/bt_add_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_add" />


    <TextView
        android:id="@+id/tv_add_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:gravity="center"
        android:text=""/>

</LinearLayout>
