<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SettingsFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings"
        android:layout_margin="20dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/tv_status" />


    <EditText
        android:id="@+id/et_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/et_status" />

    <Button
        android:id="@+id/bt_change_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_change_status" />


    <TextView
        android:id="@+id/tv_status_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:gravity="center"
        android:text=""/>


</LinearLayout>
